--- a/NEWS
+++ b/NEWS
@@ -7,12 +7,14 @@
 
   Major changes between OpenSSL 1.1.1e and OpenSSL 1.1.1f [under development]
 
-      o
+      o Revert the unexpected EOF reporting via SSL_ERROR_SSL
 
   Major changes between OpenSSL 1.1.1d and OpenSSL 1.1.1e [17 Mar 2020]
 
       o Fixed an overflow bug in the x64_64 Montgomery squaring procedure
         used in exponentiation with 512-bit moduli (CVE-2019-1551)
+      o Properly detect unexpected EOF while reading in libssl and report
+        it via SSL_ERROR_SSL
 
   Major changes between OpenSSL 1.1.1c and OpenSSL 1.1.1d [10 Sep 2019]
 
