--- a/doc/man3/SSL_shutdown.pod
+++ b/doc/man3/SSL_shutdown.pod
@@ -80,6 +80,12 @@ It should only be done when the peer has a way to make sure all
 data has been received and doesn't wait for the close_notify alert
 message, otherwise an unexpected EOF will be reported.
 
+There are implementations that do not send the required close_notify alert.
+If there is a need to communicate with such an implementation, and it's clear
+that all data has been received, do not wait for the peer's close_notify alert.
+Waiting for the close_notify alert when the peer just closes the connection will
+result in an error being generated.
+
 =head2 First to close the connection
 
 When the application is the first party to send the close_notify
@@ -128,9 +134,10 @@ The following return values can occur:
 The shutdown is not yet finished: the close_notify was sent but the peer
 did not send it back yet.
 Call SSL_read() to do a bidirectional shutdown.
-Do not call L<SSL_get_error(3)>, this is not an error.
-If SSL_get_error() is called, it may misleadingly indicate an error even though
-no error occurred.
+
+Unlike most other function, returning 0 does not indicate an error.
+L<SSL_get_error(3)> should not get called, it may misleadingly
+indicate an error even though no error occurred.
 
 =item Z<>1
 
