fixup! Document X509_verify_ex() and X509_REQ_verify_ex()

--- a/doc/man3/X509_sign.pod
+++ b/doc/man3/X509_sign.pod
@@ -86,7 +86,8 @@ L<X509_NAME_get_index_by_NID(3)>,
 L<X509_NAME_print_ex(3)>,
 L<X509_new(3)>,
 L<X509V3_get_d2i(3)>,
-L<X509_verify_cert(3)>
+L<X509_verify_cert(3)>,
+L<OPENSSL_CTX(3)>
 
 =head1 HISTORY
 
